@startuml
class ApplicationBuilder {
    + ApplicationBuilder()
    + Reset() : void
    + AddSecurity() : void
    + AddServeStaticFile() : void
    + AddLocalDatabase() : void
    + GetProduct() : WebApplication
}
class WebApplication {
    + Add(f:string) : void
    + Show() : void
}
class "List`1"<T> {
}
IBuilder <|-- ApplicationBuilder
ApplicationBuilder --> "_webApplication" WebApplication
WebApplication o-> "FunctionList<string>" "List`1"
@enduml
